[DATALAD] Recorded changes

--- a/README
+++ b/README
@@ -8,10 +8,14 @@ French participants were 30 healthy, right-handed adults.  They self-identifed a
 
 Experiment Procedure
 
-After  giving their  informed  consent,  participants  were  familiarized  with the  MRI  facility and assumed a supine position on the scanner.  Auditory stimuli were delivered through MRI-safe,  high-fidelity  headphones  inside  the  head  coil.   The  headphones  were  secured against  the  plastic  frame  of  the  coil  using  foam  blocks.   An  experimenter  increased  the sound volume stepwise until the participants could hear clearly.  The stimuli were divided into 9 sections, and each lasted for about 10 minutes.  Participants listened passively to the9 sections and completed 4 quiz questions after each section (36 questions in total).  These questions were used to confirm their comprehension and were viewed by the participants via a mirror attached to the head coil and they answered through a button box.  The entire session, including preparation time and practice, lasted for around 2.5 hours.
+After  giving their  informed  consent,  participants  were  familiarized  with the  MRI  facility and assumed a supine position on the scanner.  Auditory stimuli were delivered through MRI-safe,  high-fidelity  headphones  inside  the  head  coil.   The  headphones  were  secured against  the  plastic  frame  of  the  coil  using  foam  blocks.   An  experimenter  increased  the sound volume stepwise until the participants could hear clearly.  The stimuli were divided into 9 sections, and each lasted for about 10 minutes.  Participants listened passively to the 9 sections and completed 4 quiz questions after each section (36 questions in total).  These questions were used to confirm their comprehension and were viewed by the participants via a mirror attached to the head coil and they answered through a button box.  The entire session, including preparation time and practice, lasted for around 2.5 hours.
+
+Scanner Settings
+
+English and Chinese MRI images were acquired with a 3T MRI GE Discovery MR750 scanner  with  a  32-channel  head  coil.   French  MRI  images  were  acquired  with  a  3T  Siemens Magnetom Prisma Fit 230 scanner.  Anatomical scans were acquired using a T1-weighted volumetric  Magnetization  Prepared  RApid  Gradient-Echo  (MP-RAGE)  pulse  sequence. Functional scans were acquired using a multi-echo planar imaging (ME-EPI) sequence with online reconstruction (TR=2000 ms; English and Chinese:  TEs=12.8, 27.5, 43 ms; French:TEs=10, 25, 38 ms; FA=77◦; matrix size=72 x 72; FOV=240.0 mm x 240.0 mm; 2 x image acceleration; English and Chinese:  33 axial slices; French:  34 axial slices; voxel size=3.75 x 3.75 x 3.8 mm).  
 
 Data Preprocessing
 
-English and Chinese MRI images were acquired with a 3T MRI GE Discovery MR750 scanner  with  a  32-channel  head  coil.   French  MRI  images  were  acquired  with  a  3T  Siemens Magnetom Prisma Fit 230 scanner.  Anatomical scans were acquired using a T1-weighted volumetric  Magnetization  Prepared  RApid  Gradient-Echo  (MP-RAGE)  pulse  sequence. Functional scans were acquired using a multi-echo planar imaging (ME-EPI) sequence with online reconstruction (TR=2000 ms; English and Chinese:  TEs=12.8, 27.5, 43 ms; French:TEs=10, 25, 38 ms; FA=77◦; matrix size=72 x 72; FOV=240.0 mm x 240.0 mm; 2 x imageacceleration; English and Chinese:  33 axial slices; French:  34 axial slices; voxel size=3.75 x 3.75 x 3.8 mm).  All fMRI data were preprocessed using AFNI version 16 (Cox 1996).  The first 4 volumes in each run were excluded from analyses to allow for T1-equilibration effects. Multi-echo independent components analysis (ME-ICA) (Kundu et al. 2012) were used to denoise data for motion, physiology and scanner artifacts.  Images were then spatially normalized to the standard space of the Montreal Neurological Institute (MNI) atlas, yielding a volumetric time series resampled at 2 mm cubic voxels for the English and Chinese data and 3.15 mm cubic voxels for the French data.
+All fMRI data were preprocessed using AFNI version 16 (Cox 1996).  The first 4 volumes in each run were excluded from analyses to allow for T1-equilibration effects. Multi-echo independent components analysis (ME-ICA) (Kundu et al. 2012) were used to denoise data for motion, physiology and scanner artifacts.  Images were then spatially normalized to the standard space of the Montreal Neurological Institute (MNI) atlas, yielding a volumetric time series resampled at 2 mm cubic voxels for the English and Chinese data and 3.15 mm cubic voxels for the French data. These processed data files are available under the derivatives directory. 
 
 
