--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+NOTE: This dataset is still under construction.
+
 Participants  
 
 Participants for  the  English  study  were  51  young  adults  (32  females,  mean  age=21.3,SD=3.6)  with  no  history  of  psychiatric,  neurological  or  other  medical  illness  that  might compromise cognitive functions.  They self-identified as native English speakers, and strictly qualified as right-handed on the Edinburgh handedness inventory (Oldfield 1971).  All participants were paid, and gave written informed consent prior to participation, in accordance with the IRB guidelines of Cornell University. 
