--- a/README
+++ b/README
@@ -4,9 +4,9 @@ Participants
 
 Participants for  the  English  study  were  51  young  adults  (32  females,  mean  age=21.3,SD=3.6)  with  no  history  of  psychiatric,  neurological  or  other  medical  illness  that  might compromise cognitive functions.  They self-identified as native English speakers, and strictly qualified as right-handed on the Edinburgh handedness inventory (Oldfield 1971).  All participants were paid, and gave written informed consent prior to participation, in accordance with the IRB guidelines of Cornell University. 
 
-Chinese  participants  were  35  healthy,  right-handed  young  adults  (15  females,  meanage=19.3, SD=1.6).  They self-identified as native Chinese speakers, and had no history of psychiatric, neurological, or other medical illness that could compromise cognitive functions. All  participants  were  paid,  and  gave  written  informed  consent  prior  to  participation,  in accordance with the IRB guidelines of Jiangsu Normal University. 
+Chinese  participants  were  35  healthy,  right-handed  young  adults  (15  females,  mean age=19.3, SD=1.6).  They self-identified as native Chinese speakers, and had no history of psychiatric, neurological, or other medical illness that could compromise cognitive functions. All  participants  were  paid,  and  gave  written  informed  consent  prior  to  participation,  in accordance with the IRB guidelines of Jiangsu Normal University. 
 
-French participants were 30 healthy, right-handed adults.  They self-identifed as native French  speakers  and  had  no  history  of  psychiatric,  neurological,  or  other  medical  illness that could compromise cognitive functions.  All participants gave written informed consent prior to participation, in accordance with the Regional Committee for the Protection of Persons involved in Biomedical Research.
+French participants were 30 healthy, right-handed adults.  They self-identified as native French  speakers  and  had  no  history  of  psychiatric,  neurological,  or  other  medical  illness that could compromise cognitive functions.  All participants gave written informed consent prior to participation, in accordance with the Regional Committee for the Protection of Persons involved in Biomedical Research.
 
 Experiment Procedure
 
@@ -18,7 +18,7 @@ English and Chinese MRI images were acquired with a 3T MRI GE Discovery MR750 sc
 
 Data Preprocessing
 
-All fMRI data were preprocessed using AFNI version 16 (Cox 1996).  The first 4 volumes in each run were excluded from analyses to allow for T1-equilibration effects. Multi-echo independent components analysis (ME-ICA) (Kundu et al. 2012) were used to denoise data for motion, physiology and scanner artifacts.  Images were then spatially normalized to the standard space of the Montreal Neurological Institute (MNI) atlas, yielding a volumetric time series resampled at 2 mm cubic voxels. These processed data files are available under the derivatives directory. 
+All fMRI data were preprocessed using AFNI version 16 (Cox 1996).  The first 4 volumes in each run were excluded from analyses to allow for T1-equilibration effects. Multi-echo independent components analysis (ME-ICA; Kundu et al. 2012) were used to denoise data for motion, physiology and scanner artifacts.  Images were then spatially normalized to the standard space of the Montreal Neurological Institute (MNI) atlas, yielding a volumetric time series resampled at 2 mm cubic voxels. These processed data files are available under the derivatives directory. 
 
 
 
