[OpenNeuro] Recorded changes

--- a/README
+++ b/README
@@ -16,6 +16,8 @@ Stimuli
 
 The English audiobook is 94 minutes long, translated by David Wilkinson and read by Karen Savage. The Chinese audiobook is 99 minutes long, read by a professional female Chinese broadcaster hired by the experimenter. The French audiobook is 97 minutes long, read by Nadine Eckert-Boulet and published by the now-defunct Omilia Languages Ltd. The original French text is copyrighted by Gallimard 1946.
 
+One of the central themes in the story is the difference between adults and children, especially the lack of imagination in the former. The narrator uses the visual cues of different drawings to emphasize this message and these drawings are present in the original text. In the English and Chinese study, to help the participants understand this point, these visual cues were incorporated during the audio presentation for the first chapter and are included in the OpenNeuro repository. In order to control for the visual stimuli and its associated neural activation, ``picture events'' conditions and ``picture blocks'' conditions are also included in the analysis to account for the visual stimuli presented to participants and its associated neural activation. The ``picture events'' occur at the 10 s, 35 s, and 60 s timepoints in the first section of the story while the ``picture blocks'' also occur at the 10 s, 35 s, and 60 s timepoints in the first section and last for 15 s, 20 s, and 15 s respectively. These conditions match the presentation and duration of the visual stimuli and are aligned with particular plot points in the story.
+
 Acquisition
 
 English and Chinese MRI images were acquired with a 3T MRI GE Discovery MR750 scanner with a 32-channel head coil. French MRI images were acquired with a 3T Siemens Magnetom Prisma Fit 230 scanner. Anatomical scans were acquired using a T1-weighted volumetric Magnetization Prepared Rapid Gradient-Echo (MP-RAGE) pulse sequence. Functional scans were acquired using a multi-echo planar imaging (ME-EPI) sequence with online reconstruction (TR=2000 ms; English and Chinese: TEs=12.8, 27.5, 43 ms; French: TEs=10, 25, 38 ms; FA=77◦; matrix size=72 x 72; FOV=240.0 mm x 240.0 mm; 2112x image acceleration; English and Chinese: 33 axial slices; French: 34 axial slices; voxel size=3.75 x 3.75 x 3.8 mm).
@@ -26,4 +28,6 @@ MRI data files were converted from DICOM to NIfTI format and preprocessed using 
 Anatomical. The anatomical/structural MRI scans were deskulled using "3dSkullStrip". The resulting anatomical images were nonlinearly aligned to the Montreal Neurological Institute (MNI) N27 template brain. Resulting anatomical images were used to create grey matter masks. 
 Functional. The first 4 volumes in each run were excluded from analyses to allow for T1-equilibration effects. The fMRI timeseries were then corrected for slice-timing differences ("3dTshift") and despiked ("3dDespike"). Next, volume registration was done by aligning each timepoint to the mean functional image of the centre timeseries ("3dvolreg"). Then the volume-registered and anatomically-aligned functional data were nonlinearly aligned to the MNI template brain. Multi-echo independent components analysis (ME-ICA) were used to denoise data for motion, physiology and scanner artifacts. Images were then resampled at 2 mm cubic voxels ("3dresample").
 
+Code availability
 
+Presentations scripts for all three languages along with code for the annotations are included in the repository.
