--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+2.0.0 2022-07-12
+  - added scripts for presentation and data paper preparation
 1.0.4 2021-10-05
   - remove bad subjects
 1.0.3 2021-10-02
