[OpenNeuro] Recorded changes

--- a/README
+++ b/README
@@ -16,7 +16,7 @@ Stimuli
 
 The English audiobook is 94 minutes long, translated by David Wilkinson and read by Karen Savage. The Chinese audiobook is 99 minutes long, read by a professional female Chinese broadcaster hired by the experimenter. The French audiobook is 97 minutes long, read by Nadine Eckert-Boulet and published by the now-defunct Omilia Languages Ltd. The original French text is copyrighted by Gallimard 1946.
 
-One of the central themes in the story is the difference between adults and children, especially the lack of imagination in the former. The narrator uses the visual cues of different drawings to emphasize this message and these drawings are present in the original text. In the English and Chinese study, to help the participants understand this point, these visual cues were incorporated during the audio presentation for the first chapter and are included in the OpenNeuro repository. In order to control for the visual stimuli and its associated neural activation, ``picture events'' conditions and ``picture blocks'' conditions are also included in the analysis to account for the visual stimuli presented to participants and its associated neural activation. The ``picture events'' occur at the 10 s, 35 s, and 60 s timepoints in the first section of the story while the ``picture blocks'' also occur at the 10 s, 35 s, and 60 s timepoints in the first section and last for 15 s, 20 s, and 15 s respectively. These conditions match the presentation and duration of the visual stimuli and are aligned with particular plot points in the story.
+One of the central themes in the story is the difference between adults and children, especially the lack of imagination in the former. The narrator uses the visual cues of different drawings to emphasize this message and these drawings are present in the original text. In the English and Chinese study, to help the participants understand this point, these visual cues were incorporated during the audio presentation for the first chapter and are included in the OpenNeuro repository. In order to control for the visual stimuli and its associated neural activation, "picture events" conditions and "picture blocks" conditions are also included in the analysis to account for the visual stimuli presented to participants and its associated neural activation. The "picture events" occur at the 10 s, 35 s, and 60 s timepoints in the first section of the story while the "picture blocks" also occur at the 10 s, 35 s, and 60 s timepoints in the first section and last for 15 s, 20 s, and 15 s respectively. These conditions match the presentation and duration of the visual stimuli and are aligned with particular plot points in the story.
 
 Acquisition
 
@@ -30,4 +30,4 @@ Functional. The first 4 volumes in each run were excluded from analyses to allow
 
 Code availability
 
-Presentations scripts for all three languages along with code for the annotations are included in the repository.
+Presentations scripts for all three languages along with code for technical validation are included in the repository.
