--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+2.0.5 2024-01-29
+  - updated CN subj 18 data and added missing English data
 2.0.4 2024-01-17
   - update CN subj 18 and 19 corrupted files
 2.0.3 2024-01-12
